# cpcx

./: App.cs  Bot.cs  CMakeLists.txt  Form1.Designer.cs  Form1.cs  Form1.resx  FormDebug.Designer.cs  FormDebug.cs  FormSettings.Designer.cs  FormSettings.cs  FormSpeechBubble.Designer.cs  FormSpeechBubble.cs  FormStats.cs  IUserInterface.cs  Program.cs  Settings.cs  readme.md  res.qrc
src/: app.cpp  app.hpp  bot.cpp  bot.hpp  debugdialog.cpp  debugdialog.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  settings.cpp  settings.hpp  settingsdialog.cpp  settingsdialog.hpp  speechbubble.cpp  speechbubble.hpp  statsdialog.cpp  statsdialog.hpp  trayicon.cpp  trayicon.hpp  userinterface.hpp
src/res/: angry.xpm  annoyed.xpm  excited.xpm  icon.xpm  restless.xpm  sleepy.xpm  speech.xpm  thankful.xpm
